[package]
name = "grpc-connect-test"
version = "0.1.0"
edition = "2024"

[dependencies]
yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = "9.0.0"
tokio = { version = "1.0", features = ["full"] }
prost = "0.12"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio-stream = "0.1"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
bs58 = "0.5"
